// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CvComponent should not display when loading 1`] = `
<div>
  <Loading />
</div>
`;

exports[`CvComponent should render 1`] = `
<div>
  <PersonalDetails />
</div>
`;
